# QiMen

./: .gitignore  CNAME  LICENSE  README.md  browser.js  build.js  go.mod  index.html  main.js  main.py  package-lock.json  package.json  pyproject.toml  template.html
cmd/qimen/: main.go
docs/: README.md
internal/calendar/: calendar.go
internal/data/: ba_gua.go  bagua_string.go  jia_zi.go  jie_qi.go
internal/formatter/: formatter.go
internal/layout/: layout.go
internal/model/: gong.go  model.go  zhu.go
qimen/: JiaZi.py  __init__.py  ba_shen.js  datetime.js  datetime.py  gong.py  index.js  jia_zi_graph.py  jie_qi_graph.py  jiu_xing.js  mappings.js  pan.py  shen.py  xing.py  zhu.py
qimen/data/: ba_gua.js  ba_shen.js  di_zhi.js  jia_zi.js  jie_qi.js  jiu_xing.js  tian_gan.js  yin_yang.js  yuan.js
qimen/models/: ba_shen.js  gong.js  jiu_xing.js  pan.js  zhu.js
tests/: __init__.py  datetime.test.js  main.test.js
