[project]
name = "qimen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
    "tyme4py>=1.3.9",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
plugins = []
python_version = "3.10"
show_error_codes = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
